Improve request framework