@@ -3,64 +3,61 @@ package org.example.integration.request;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
-import org.springframework.util.MultiValueMap;
 
-class HeadersBuilderTest {
+class RequestHeadersBuilderTest {
 
   @Test
   void testCreate() {
-    HeadersBuilder builder = HeadersBuilder.create();
+    RequestHeadersBuilder builder = RequestHeadersBuilder.create();
     assertNotNull(builder);
   }
 
   @Test
   void testAddHeader() {
-    MultiValueMap<String, String> headers =
-        HeadersBuilder.create().addHeader("X-Custom-Header", "value").build();
+    HttpHeaders headers =
+        RequestHeadersBuilder.create().addHeader("X-Custom-Header", "value").build();
 
     assertEquals("value", headers.getFirst("X-Custom-Header"));
   }
 
   @Test
   void testAddHeaderContentTypeJson() {
-    MultiValueMap<String, String> headers = HeadersBuilder.create().addHeaderContentTypeJson().build();
+    HttpHeaders headers = RequestHeadersBuilder.create().addHeaderContentTypeJson().build();
 
     assertEquals(MediaType.APPLICATION_JSON_VALUE, headers.getFirst(HttpHeaders.CONTENT_TYPE));
   }
 
   @Test
   void testAddHeaderContentTypeXml() {
-    MultiValueMap<String, String> headers = HeadersBuilder.create().addHeaderContentTypeXml().build();
+    HttpHeaders headers = RequestHeadersBuilder.create().addHeaderContentTypeXml().build();
 
     assertEquals(MediaType.APPLICATION_XML_VALUE, headers.getFirst(HttpHeaders.CONTENT_TYPE));
   }
 
   @Test
   void testAddAll() {
-    List<String> values = Arrays.asList("value1", "value2", "value3");
-    MultiValueMap<String, String> headers =
-        HeadersBuilder.create().addAll("X-Multi-Header", values).build();
+    List<String> values = List.of("value1", "value2", "value3");
+    HttpHeaders headers = RequestHeadersBuilder.create().addAll("X-Multi-Header", values).build();
 
     assertEquals(values, headers.get("X-Multi-Header"));
   }
 
   @Test
   void testPut() {
-    List<String> values = Arrays.asList("value1", "value2");
-    MultiValueMap<String, String> headers = HeadersBuilder.create().put("X-Header", values).build();
+    List<String> values = List.of("value1", "value2");
+    HttpHeaders headers = RequestHeadersBuilder.create().put("X-Header", values).build();
 
     assertEquals(values, headers.get("X-Header"));
   }
 
   @Test
   void testMultipleHeaders() {
-    MultiValueMap<String, String> headers =
-        HeadersBuilder.create()
+    HttpHeaders headers =
+        RequestHeadersBuilder.create()
             .addHeader("Header1", "value1")
             .addHeader("Header2", "value2")
             .addHeader("Header3", "value3")
@@ -73,8 +70,7 @@ class HeadersBuilderTest {
 
   @Test
   void testNullValuesIgnored() {
-    MultiValueMap<String, String> headers =
-        HeadersBuilder.create().addHeader("Valid", "value").build();
+    HttpHeaders headers = RequestHeadersBuilder.create().addHeader("Valid", "value").build();
 
     // Null key/value should be ignored, so only valid header should exist
     assertEquals("value", headers.getFirst("Valid"));
@@ -83,9 +79,9 @@ class HeadersBuilderTest {
 
   @Test
   void testBuildReturnsCopy() {
-    HeadersBuilder builder = HeadersBuilder.create().addHeader("Header1", "value1");
-    MultiValueMap<String, String> headers1 = builder.build();
-    MultiValueMap<String, String> headers2 = builder.build();
+    RequestHeadersBuilder builder = RequestHeadersBuilder.create().addHeader("Header1", "value1");
+    HttpHeaders headers1 = builder.build();
+    HttpHeaders headers2 = builder.build();
 
     // Should be different instances
     assertNotNull(headers1);
@@ -97,8 +93,8 @@ class HeadersBuilderTest {
 
   @Test
   void testChaining() {
-    MultiValueMap<String, String> headers =
-        HeadersBuilder.create()
+    HttpHeaders headers =
+        RequestHeadersBuilder.create()
             .addHeader("Header1", "value1")
             .addHeaderContentTypeJson()
             .addHeader("Header2", "value2")
@@ -109,4 +105,3 @@ class HeadersBuilderTest {
     assertEquals("value2", headers.getFirst("Header2"));
   }
 }
-
